# mdbook-xref

./: Cargo.toml  LICENSE  README.md  flake.nix  output.md  rust-toolchain.toml
docs/: abbreviations.csv  book.toml  style.css
docs/src/: SUMMARY.md  abbr2.md  cross_page.md  crossref.md  figure.md
mdbook-abbr2/: Cargo.toml
mdbook-abbr2/src/: main.rs
mdbook-crossref/: Cargo.toml
mdbook-crossref/src/: lib.rs  test.rs
mdbook-figure/: Cargo.toml
mdbook-figure/src/: main.rs
mdbook-xref/: Cargo.toml
mdbook-xref/src/: lib.rs  rewrite.rs
sample-book/: book.toml  style.css
sample-book/src/: SUMMARY.md  creating_links.md  cross_page.md  examples.md  introduction.md  quickstart.md  second_chapter.md
sample-book/src/nested/: adjacent.md  second_adjacent.md  test.typ
src/: crossref.rs  extract.rs  lib.rs  main.rs  rewrite.rs  rewrites.rs  typst.rs
