[package]
name = "mdbook-crossref"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.102", features = ["std"] }
indexmap = "2.13.0"
mdbook-preprocessor = { version = "0.5.2", default-features = false }
pulldown-cmark = { version = "0.13.1", default-features = false, features = ["html"] }
pulldown-cmark-to-cmark = "22.0.0"
serde_json = "1.0.149"
