[workspace]
resolver = "3"
members = [ "mdbook-xref" , "mdbook-figure", "mdbook-abbr2" ]
default-members = [ "mdbook-xref", "mdbook-figure", "mdbook-abbr2" ]

[workspace.dependencies]
anyhow = { version = "1.0.102", features = ["std"] }
mdbook-preprocessor = { version = "0.5.2", default-features = false }
pulldown-cmark = { version = "0.13.1", default-features = false, features = ["html"] }
pulldown-cmark-to-cmark = "22.0.0"
serde_json = "1.0.149"
