[package]
name = "mdbook-figure"
version = "0.2.0"
edition = "2024"
description = "a preprocessor that adds support for numbered figures in mdbook"
license = "MIT"
authors = [ "Johannes Cornelis Draaijer <jcdra1@gmail.com>" ]
documentation = "https://datdenkikniet.github.io/mdbook-xref/figure.html"
repository = "https://github.com/datdenkikniet/mdbook-xref"

[dependencies]
anyhow.workspace = true
mdbook-preprocessor.workspace = true
pulldown-cmark.workspace = true
pulldown-cmark-to-cmark.workspace = true
serde_json.workspace = true
