[package]
name = "mdbook-xref"
version = "0.1.0"
edition = "2024"
description = "a preprocessor to add support for easy cross-references in mdbook"
license = "MIT"
authors = [ "Johannes Cornelis Draaijer <jcdra1@gmail.com>" ]
documentation = "https://datdenkikniet.github.io/mdbook-xref/crossref.html"
repository = "https://github.com/datdenkikniet/mdbook-xref"

[dependencies]
anyhow.workspace = true
mdbook-preprocessor.workspace = true
pulldown-cmark.workspace = true
serde_json.workspace = true
